// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipientListScreenComponent should match the snapshot loading 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    _text={
      Object {
        "color": "darkText",
      }
    }
    contentContainerStyle={
      Array [
        Object {},
        Object {
          "dataSet": Object {},
        },
      ]
    }
    dataSet={Object {}}
    style={
      Object {
        "backgroundColor": "#fff",
      }
    }
  >
    <View>
      <View
        dataSet={Object {}}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F6F6F7",
            "marginBottom": 15,
            "marginTop": 15,
            "width": "100%",
          }
        }
      >
        <View
          dataSet={Object {}}
          style={
            Object {
              "maxWidth": 1180,
              "width": "100%",
            }
          }
        >
          <View
            dataSet={Object {}}
            style={
              Object {
                "marginBottom": 40,
                "marginRight": "auto",
                "marginTop": 25,
                "maxWidth": 580,
                "width": "100%",
              }
            }
          >
            <View
              dataSet={Object {}}
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <View
                dataSet={Object {}}
                feedbackId="field-react-aria-1-feedback"
                hasFeedbackText={false}
                hasHelpText={false}
                helpTextId="field-react-aria-1-helptext"
                isDisabled={false}
                isInvalid={false}
                isReadOnly={false}
                isRequired={false}
                labelId="field-react-aria-1-label"
                nativeID="field-react-aria-1-label"
                setHasFeedbackText={[Function]}
                setHasHelpText={[Function]}
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                    "marginBottom": 2,
                    "marginRight": 12,
                  }
                }
              >
                <Text
                  dataSet={Object {}}
                  level="1"
                  style={
                    Object {
                      "backgroundColor": undefined,
                      "color": "#666666",
                      "fontFamily": "Roboto_500Medium",
                      "fontSize": 18,
                      "fontStyle": undefined,
                      "fontWeight": undefined,
                      "letterSpacing": 0,
                      "lineHeight": 26,
                      "textAlign": "auto",
                      "textDecorationLine": undefined,
                    }
                  }
                >
                  Beneficiary Name
                </Text>
              </View>
              <TextInput
                _text={
                  Object {
                    "color": "darkText",
                  }
                }
                accessible={true}
                allowFontScaling={true}
                dataSet={Object {}}
                disabled={false}
                editable={true}
                isRequired={false}
                nativeID="field-react-aria-1"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                placeholder="Search"
                placeholderTextColor="#a3a3a3"
                readOnly={false}
                rejectResponderTermination={true}
                required={false}
                secureTextEntry={false}
                selectionColor="#1f2937"
                style={
                  Array [
                    Object {
                      "backgroundColor": "#fff",
                      "borderColor": "#666666",
                      "borderRadius": 3,
                      "borderStyle": "solid",
                      "borderWidth": 1,
                      "color": "#666666",
                      "fontFamily": "Roboto_400Regular",
                      "fontSize": 18,
                      "fontStyle": undefined,
                      "fontWeight": undefined,
                      "lineHeight": 26,
                      "overflow": "hidden",
                      "paddingBottom": 12,
                      "paddingLeft": 12,
                      "paddingRight": 12,
                      "paddingTop": 12,
                      "width": undefined,
                    },
                    Object {},
                  ]
                }
                testID="recipient-list-table-filter"
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
          </View>
        </View>
      </View>
      <View
        dataSet={Object {}}
        style={
          Object {
            "marginLeft": "auto",
            "marginRight": "auto",
            "maxWidth": 1180,
            "width": "100%",
          }
        }
      >
        <View
          dataSet={Object {}}
          fadeDuration={0.1}
          speed={1}
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 40,
              "overflow": "hidden",
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#e5e5e5",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              }
            }
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaProvider>
`;

exports[`RecipientListScreenComponent should match the snapshot with forms 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    _text={
      Object {
        "color": "darkText",
      }
    }
    contentContainerStyle={
      Array [
        Object {},
        Object {
          "dataSet": Object {},
        },
      ]
    }
    dataSet={Object {}}
    style={
      Object {
        "backgroundColor": "#fff",
      }
    }
  >
    <View>
      <View
        dataSet={Object {}}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F6F6F7",
            "marginBottom": 15,
            "marginTop": 15,
            "width": "100%",
          }
        }
      >
        <View
          dataSet={Object {}}
          style={
            Object {
              "maxWidth": 1180,
              "width": "100%",
            }
          }
        >
          <View
            dataSet={Object {}}
            style={
              Object {
                "marginBottom": 40,
                "marginRight": "auto",
                "marginTop": 25,
                "maxWidth": 580,
                "width": "100%",
              }
            }
          >
            <View
              dataSet={Object {}}
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <View
                dataSet={Object {}}
                feedbackId="field-react-aria-1-feedback"
                hasFeedbackText={false}
                hasHelpText={false}
                helpTextId="field-react-aria-1-helptext"
                isDisabled={false}
                isInvalid={false}
                isReadOnly={false}
                isRequired={false}
                labelId="field-react-aria-1-label"
                nativeID="field-react-aria-1-label"
                setHasFeedbackText={[Function]}
                setHasHelpText={[Function]}
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                    "marginBottom": 2,
                    "marginRight": 12,
                  }
                }
              >
                <Text
                  dataSet={Object {}}
                  level="1"
                  style={
                    Object {
                      "backgroundColor": undefined,
                      "color": "#666666",
                      "fontFamily": "Roboto_500Medium",
                      "fontSize": 18,
                      "fontStyle": undefined,
                      "fontWeight": undefined,
                      "letterSpacing": 0,
                      "lineHeight": 26,
                      "textAlign": "auto",
                      "textDecorationLine": undefined,
                    }
                  }
                >
                  Beneficiary Name
                </Text>
              </View>
              <TextInput
                _text={
                  Object {
                    "color": "darkText",
                  }
                }
                accessible={true}
                allowFontScaling={true}
                dataSet={Object {}}
                disabled={false}
                editable={true}
                isRequired={false}
                nativeID="field-react-aria-1"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                placeholder="Search"
                placeholderTextColor="#a3a3a3"
                readOnly={false}
                rejectResponderTermination={true}
                required={false}
                secureTextEntry={false}
                selectionColor="#1f2937"
                style={
                  Array [
                    Object {
                      "backgroundColor": "#fff",
                      "borderColor": "#666666",
                      "borderRadius": 3,
                      "borderStyle": "solid",
                      "borderWidth": 1,
                      "color": "#666666",
                      "fontFamily": "Roboto_400Regular",
                      "fontSize": 18,
                      "fontStyle": undefined,
                      "fontWeight": undefined,
                      "lineHeight": 26,
                      "overflow": "hidden",
                      "paddingBottom": 12,
                      "paddingLeft": 12,
                      "paddingRight": 12,
                      "paddingTop": 12,
                      "width": undefined,
                    },
                    Object {},
                  ]
                }
                testID="recipient-list-table-filter"
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
          </View>
        </View>
      </View>
      <View
        dataSet={Object {}}
        style={
          Object {
            "marginLeft": "auto",
            "marginRight": "auto",
            "maxWidth": 1180,
            "width": "100%",
          }
        }
      >
        <View
          dataSet={Object {}}
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <View
            dataSet={Object {}}
            style={Object {}}
          >
            <View
              dataSet={Object {}}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                }
              }
            >
              <Text
                dataSet={Object {}}
                level="2"
                style={
                  Object {
                    "backgroundColor": undefined,
                    "color": "#000000",
                    "fontFamily": "Roboto_500Medium",
                    "fontSize": 28,
                    "fontStyle": undefined,
                    "fontWeight": undefined,
                    "letterSpacing": 0,
                    "lineHeight": 34,
                    "textAlign": "auto",
                    "textDecorationLine": undefined,
                  }
                }
              >
                form-name-1
              </Text>
              <View
                colorScheme="coolGray"
                dataSet={Object {}}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#24303E",
                    "borderColor": "transparent",
                    "borderRadius": 4,
                    "borderWidth": 1,
                    "height": 20,
                    "marginLeft": 10,
                    "marginRight": 10,
                    "paddingBottom": 2,
                    "paddingLeft": 8,
                    "paddingRight": 8,
                    "paddingTop": 2,
                    "width": 28,
                  }
                }
              >
                <Text
                  dataSet={Object {}}
                  level="5"
                  style={
                    Object {
                      "backgroundColor": undefined,
                      "color": "#fff",
                      "fontFamily": "Roboto_500Medium",
                      "fontSize": 14,
                      "fontStyle": undefined,
                      "fontWeight": undefined,
                      "letterSpacing": 0,
                      "lineHeight": 17,
                      "textAlign": "auto",
                      "textDecorationLine": undefined,
                    }
                  }
                >
                  0
                </Text>
              </View>
            </View>
          </View>
          <View
            dataSet={Object {}}
            fadeDuration={0.1}
            speed={1}
            style={
              Object {
                "backgroundColor": "transparent",
                "height": 40,
                "overflow": "hidden",
                "paddingBottom": 16,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 16,
                "width": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#e5e5e5",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          dataSet={Object {}}
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <View
            dataSet={Object {}}
            style={Object {}}
          >
            <View
              dataSet={Object {}}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                }
              }
            >
              <Text
                dataSet={Object {}}
                level="2"
                style={
                  Object {
                    "backgroundColor": undefined,
                    "color": "#000000",
                    "fontFamily": "Roboto_500Medium",
                    "fontSize": 28,
                    "fontStyle": undefined,
                    "fontWeight": undefined,
                    "letterSpacing": 0,
                    "lineHeight": 34,
                    "textAlign": "auto",
                    "textDecorationLine": undefined,
                  }
                }
              >
                form-name-2
              </Text>
              <View
                colorScheme="coolGray"
                dataSet={Object {}}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#24303E",
                    "borderColor": "transparent",
                    "borderRadius": 4,
                    "borderWidth": 1,
                    "height": 20,
                    "marginLeft": 10,
                    "marginRight": 10,
                    "paddingBottom": 2,
                    "paddingLeft": 8,
                    "paddingRight": 8,
                    "paddingTop": 2,
                    "width": 28,
                  }
                }
              >
                <Text
                  dataSet={Object {}}
                  level="5"
                  style={
                    Object {
                      "backgroundColor": undefined,
                      "color": "#fff",
                      "fontFamily": "Roboto_500Medium",
                      "fontSize": 14,
                      "fontStyle": undefined,
                      "fontWeight": undefined,
                      "letterSpacing": 0,
                      "lineHeight": 17,
                      "textAlign": "auto",
                      "textDecorationLine": undefined,
                    }
                  }
                >
                  0
                </Text>
              </View>
            </View>
          </View>
          <View
            dataSet={Object {}}
            fadeDuration={0.1}
            speed={1}
            style={
              Object {
                "backgroundColor": "transparent",
                "height": 40,
                "overflow": "hidden",
                "paddingBottom": 16,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 16,
                "width": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#e5e5e5",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaProvider>
`;
